# sdkwork-sdk-commons

./: .gitignore  AGENTS.md  README.md
docs/: INDEX.yaml  README.md
sdkwork-sdk-common-csharp/: README.md  SDKwork.Common.csproj
sdkwork-sdk-common-csharp/Core/: Types.cs
sdkwork-sdk-common-csharp/Errors/: Errors.cs
sdkwork-sdk-common-flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sdkwork-sdk-common-flutter/lib/: sdkwork_common_flutter.dart
sdkwork-sdk-common-flutter/specs/: README.md  component.spec.json
sdkwork-sdk-common-go/: README.md  go.mod
sdkwork-sdk-common-java/: README.md  pom.xml
sdkwork-sdk-common-java/specs/: README.md  component.spec.json
sdkwork-sdk-common-kt/: README.md  build.gradle.kts
sdkwork-sdk-common-python/: README.md  pyproject.toml
sdkwork-sdk-common-python/sdkwork/: __init__.py
sdkwork-sdk-common-python/sdkwork/common/: __init__.py
sdkwork-sdk-common-python/sdkwork/common/auth/: __init__.py
sdkwork-sdk-common-python/sdkwork/common/core/: __init__.py  types.py
sdkwork-sdk-common-python/sdkwork/common/errors/: __init__.py
sdkwork-sdk-common-python/sdkwork/common/http/: __init__.py
sdkwork-sdk-common-python/sdkwork/common/utils/: __init__.py
sdkwork-sdk-common-python/specs/: README.md  component.spec.json
sdkwork-sdk-common-python/tests/: test_namespace_imports.py
sdkwork-sdk-common-swift/: Package.swift  README.md
sdkwork-sdk-common-typescript/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
sdkwork-sdk-common-typescript/specs/: README.md  (+1 more)
(+34 files in other folders)
